Updating sample using accelerator-core library

--- a/android/OneToOneScreenSharingSample/app/src/main/res/values/colors.xml
+++ b/android/OneToOneScreenSharingSample/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="quality_warning">#fef9c8</color>
     <color name="warning_text">#ad7212</color>
     <color name="bckg_bar">#cc000000</color>
+    <color name="screensharing_bar">#7ED321</color>
 </resources>
